--- a/package.json
+++ b/package.json
@@ -4,16 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "doc:generate": "sassdoc ."
+    "doc:generate": "sassdoc .",
+    "stylelint:scss": "npx stylelint \"**/*.scss\" --fix",
+    "stylelint:css": "npx stylelint \"**/*.css\" --fix",
+    "lint:fix": "npm run stylelint:scss && npm run stylelint:css",
+    "lint": "npx stylelint \"**/*.scss\" && npx stylelint \"**/*.css\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint-config-prettier": "^9.1.0",
     "normalize-scss": "^8.0.0",
     "prettier": "3.2.5",
     "stylelint": "^16.2.1",
+    "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-sass-guidelines": "^11.1.0",
     "stylelint-config-standard": "^36.0.0",
-    "stylelint-config-standard-scss": "^13.0.0"
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-prettier": "^5.0.0"
   }
 }
