--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,14 +1,20 @@
 {
     "extends": [
         "stylelint-config-sass-guidelines",
-        "prettier",
-        "stylelint-prettier/recommended"
+        "stylelint-prettier/recommended",
+        "stylelint-config-standard-scss",
+        "prettier"
     ],
+    "plugins": [
+        "stylelint-scss"
+      ],
     "rules": {
         "selector-no-qualifying-type": null,
         "declaration-block-single-line-max-declarations": null,
         "scss/no-global-function-names": null,
-        "indentation": 2
+        "at-rule-no-unknown": null,
+        "scss/at-rule-no-unknown": true,
+        "scss/selector-no-redundant-nesting-selector": true
     },
     
         "ignoreFiles": ["sassdoc/**/*css"]
