--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,22 +1,18 @@
 {
-    "extends": [
-        "stylelint-config-sass-guidelines",
-        "stylelint-prettier/recommended",
-        "stylelint-config-standard-scss",
-        "prettier"
-    ],
-    "plugins": [
-        "stylelint-scss"
-      ],
-    "rules": {
-        "selector-no-qualifying-type": null,
-        "declaration-block-single-line-max-declarations": null,
-        "scss/no-global-function-names": null,
-        "at-rule-no-unknown": null,
-        "scss/at-rule-no-unknown": true,
-        "scss/selector-no-redundant-nesting-selector": true
-    },
-    
-        "ignoreFiles": ["sassdoc/**/*css"]
-      
+  "plugins": ["stylelint-scss", "stylelint-prettier"],
+  "extends": [
+    "stylelint-config-sass-guidelines",
+    "stylelint-prettier/recommended",
+    "stylelint-config-standard-scss",
+    "prettier"
+  ],
+  "rules": {
+    "selector-no-qualifying-type": null,
+    "declaration-block-single-line-max-declarations": null,
+    "scss/no-global-function-names": null,
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
+    "scss/selector-no-redundant-nesting-selector": true
+  },
+  "ignoreFiles": ["sassdoc/**/*css"]
 }
