--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,8 @@
 {
-  "plugins": ["stylelint-scss", "stylelint-prettier"],
+  "plugins": [
+    "stylelint-scss",
+    "stylelint-prettier"
+  ],
   "extends": [
     "stylelint-config-sass-guidelines",
     "stylelint-prettier/recommended",
@@ -14,5 +17,7 @@
     "scss/at-rule-no-unknown": true,
     "scss/selector-no-redundant-nesting-selector": true
   },
-  "ignoreFiles": ["sassdoc/**/*css"]
+  "ignoreFiles": [
+    "sassdoc/**/*css"
+  ]
 }
