--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "doc:generate": "sassdoc .",
+    "doc:generate": "sassdoc ./src",
     "stylelint:scss": "npx stylelint \"**/*.scss\" ",
     "stylelint:css": "npx stylelint \"**/*.css\"",
     "lint": "npm run stylelint:scss  && npm run stylelint:css",
     "lint:fix": "npm run stylelint:scss --fix && npm run stylelint:css --fix",
-    "prepare": "husky"
+    "prepare": "husky",
+    "gulp": "gulp"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-reset-and-normalize": "^2.3.6",
     "eslint-config-prettier": "^9.1.0",
+    "gulp": "^4.0.2",
+    "gulp-sass": "^5.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "node-sass": "^9.0.0",
     "normalize-scss": "^8.0.0",
     "prettier": "3.2.5",
+    "sass": "^1.72.0",
     "stylelint": "^16.2.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-sass-guidelines": "^11.1.0",
